force-app/main/default/objects/Payroll_Audit__c/Payroll_Audit__c.object-meta.xml
<CustomObject>
    <label>Payroll Audit</label>
    <nameField>
        <displayFormat>PAY-{00000000}</displayFormat>
        <label>Payroll Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>