force-app/main/default/objects/Payroll_Audit__c/fields/Admin_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Admin_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Admin First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>