force-app/main/default/objects/Payroll_Audit__c/fields/Manual_Review_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Completion_Date__c</fullName>
    <description>Date manual review status was moved to &apos;Complete&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Manual Review Completion Date</label>
    <type>DateTime</type>
</CustomField>