force-app/main/default/objects/Payroll_Audit__c/fields/Manual_Review_Message__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Message__c</fullName>
    <description>Audit review message populated by IC after reviewing automation error/failure</description>
    <label>Manual Review Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>