force-app/main/default/objects/Payroll_Audit__c/fields/State_Added_At__c.field-meta.xml
<CustomField>
    <fullName>State_Added_At__c</fullName>
    <description>Date state was added, pulled from S3 file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>State Added At</label>
    <type>Date</type>
</CustomField>