force-app/main/default/objects/Payroll_Audit__c/fields/SUI_Reimbursable__c.field-meta.xml
<CustomField>
    <fullName>SUI_Reimbursable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if bot is sui reimbursable</description>
    <label>SUI Reimbursable</label>
    <type>Checkbox</type>
</CustomField>