force-app/main/default/objects/Payroll_Audit__c/fields/Tax_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>