force-app/main/default/objects/Payroll_Audit__c/recordTypes/SUI.recordType-meta.xml
<RecordType>
    <fullName>SUI</fullName>
    <active>true</active>
    <label>SUI</label>
</RecordType>