force-app/main/default/objects/Payroll_Audit__c/recordTypes/WH.recordType-meta.xml
<RecordType>
    <fullName>WH</fullName>
    <active>true</active>
    <label>WH</label>
</RecordType>